# api-books-rust-actix-web

./: .env  Cargo.toml  README.md
.github/workflows/: actix_web.yml
src/: main.rs
src/entity/: book.rs  create_book.rs  error_data.rs  mod.rs  update_book.rs
src/entrypoint/: routes.rs
src/repository/: mod.rs  mongo_repo.rs
src/service/: book_service.rs
